updated CSS property (box-sizing: border-box) for the footer to prevent width overflow which also resolved CSS footer issue in the settings page

--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -73,6 +73,7 @@ footer {
 	color: white;
 	padding: 10px;
 	display: inline-flex;
+	box-sizing: border-box;
 	margin-bottom: 0 !important;
 }
 
